# bio-mlff

./: README.md  pyproject.toml
biomlff/: aceff.py  aceff_v1.1.eqx  aceff_v2.0.eqx  aceffpotential.py  aimnet2.py  aimnet2potential.py  ani.py  anipotential.py  fennixpotential.py  mace.py  macepotential.py  orb.py  orbpotential.py  so3lr.eqx  so3lr.py  so3lrpotential.py
examples/: benchmark_water.py  phenol_rdf.py
examples/water/: create_water.py
test/: TestAIMNet2Potential.py  TestANIPotential.py  TestAceFFPotential.py  TestFeNNixPotential.py  TestMACELESPotential.py  TestMACEPotential.py  TestORBPotential.py  TestSO3LRPotential.py  report_force_errors.py
test/data/: aceff_energies.py  aceff_references.py  aimnet2_energies.py  aimnet2_references.py  ani_energies.py  ani_references.py  fennix_energies.py  fennix_references.py  mace_energies.py  mace_references.py  maceles_references.py  orb_energies.py  orb_references.py  reference_utils.py  so3lr_energies.py  so3lr_references.py
